gccida/g1/invalidate_for_call
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/invalidate_for_call/src/cse.c:2576:22: error: expected identifier or '('
 struct cse_reg_info = cached_cse_reg_info; 
                     ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/invalidate_for_call/src/cse.c:2586:60: error: expected ')'
if ( cached_regno != ( _DWORD)v1 || (  struct cse_reg_info = cached_cse_reg_info) == 0LL ) 
                                                           ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/invalidate_for_call/src/cse.c:2586:37: note: to match this '('
if ( cached_regno != ( _DWORD)v1 || (  struct cse_reg_info = cached_cse_reg_info) == 0LL ) 
                                    ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/invalidate_for_call/src/cse.c:2586:83: error: expected expression
if ( cached_regno != ( _DWORD)v1 || (  struct cse_reg_info = cached_cse_reg_info) == 0LL ) 
                                                                                  ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/invalidate_for_call/src/cse.c:2587:2: error: expected expression
 struct cse_reg_info = get_cse_reg_info( v1); 
 ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/invalidate_for_call/src/cse.c:2615:25: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
v6 = ( ( unsigned int)( mode_class_0[*( ( unsigned __int8 *)exp + 2)] - 5) < 2) + 1; 
                        ^~~~~~~~~~~~
                        mode_class
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/invalidate_for_call/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
5 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/invalidate_for_call/src/obj/cse.o] Error 1
